# pre-commit-code-review-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  requirements.txt  setup.cfg
code_review_hooks/: check_robotframework_files.py
tests/: check_robot_file_name_test.py
tests/testdata/: badname.robot
