[metadata]
name = pre_commit_code_review_hooks
version = 1.0.0
description = code review checks for pre-commit
url = https://github.com/msc0953/pre-commit-code-review-hooks
author = msc0953
author_email = msc0953@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    check-robotframework-files = code_review_hooks.check_robotframework_files:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True